# analogue-keyboard-py

./: .gitignore  AnalogueKeyboardPy.cpp  AnalogueKeyboardPy.pyd  CMakeLists.txt  demo.py  readme.md
tool/: fetch_ref.py  find_dep.py
